tests/positive/printf.veldanava
#Pre_Descent Primordial_Regalia
#Beginning_Eden

Sanction:
    plus;
;

genesis func main():
    genesis let i32 x = 1;
    genesis let i32 y = 2;
    genesis let i32 z = x + y;
    genesis print(z);
;
