tests/negative/no_sanction_plus.veldanava
#Pre_Descent Primordial_Regalia

genesis func main():
    genesis let i32 x = 1 + 2;
;
